@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: external.c,v 1.38 2004/03/11 11:12:56 Superfly_Jon Exp $
+ * $Id: external.c,v 1.39 2004/03/18 23:29:14 oysteijo Exp $
  */
 
 #include "config.h"
@@ -49,7 +49,8 @@
 #include <stdio.h>
 
 #else /* #ifndef WIN32 */
-#include <winsock.h>
+#include <winsock2.h>
+#include <ws2tcpip.h>
 
 #define EWOULDBLOCK             WSAEWOULDBLOCK
 #define EINPROGRESS             WSAEINPROGRESS
